# direction-instability-atlas

./: .gitignore  .zenodo.json  CITATION.cff  DATA_INVENTORY.md  DEVIATIONS.md  PERPLEXITY_QUESTIONS.md  PLAN.md  PREREGISTRATION.md  PREREGISTRATION_BATCH2.md  PREREGISTRATION_BATCH3.md  SUBMISSION_STATUS.md  power_analysis.py  pyproject.toml
data/: cross_reference.json  power_analysis_results.json
experiments/: 01_compute_tahoe_di.py  02_compute_jump_crispr_di.py  03_compute_jump_orf_di.py  04_compute_prism_viability_cv.py  05_cross_dataset_concordance.py  06_prism_vs_di.py  07_crispr_essentiality.py  08_knockout_vs_overexpression.py  09_expression_variance.py  10_prism_selectivity.py  11_paralog_buffering.py  12_moa_stratification.py  13_cpg0000_pilot.py  14_depmap_convergent.py  modal_01_tahoe.py  utils.py
geometry/: __init__.py  bracket_norm.py  distances.py
paper/: COVER_LETTER.md  RESULTS_WRITEUP_V1.md  RESULTS_WRITEUP_V2.md  SUPPLEMENTARY_AI_USAGE.md  ZENODO_DEPOSIT.md  atlas_paper_v1.tex  atlas_paper_v2.tex  atlas_paper_v3.tex  atlas_paper_v4.tex  atlas_paper_v4_patterns.tex  atlas_paper_v5_plos.tex  generate_figures.py  generate_graphical_abstract.py  supplementary_ai_usage.tex
reference/: CITATION_INDEX.md
results/: concordance.json  concordance_a2.json  cpg0000_pilot.json  crispr_di.csv  depmap_convergent.json  di_atlas_results.html  essentiality.json  expression_variance.json  knockout_vs_overexpression.json  moa_stratification.json  orf_di.csv  paralog_buffering.json  prism_concordance.json  prism_cv.csv  prism_selectivity.json  tahoe_di.csv
(+12 files in other folders)
