[project]
name = "direction-instability-atlas"
version = "0.1.0"
description = "Cross-modal direction instability atlas for perturbation biology"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "pyarrow",
    "huggingface-hub>=1.22.0",
    "datasets>=5.0.0",
]

[project.optional-dependencies]
tahoe = ["datasets", "huggingface-hub"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
